--- a/SCSU_V1/html/home_en_US.html
+++ b/SCSU_V1/html/home_en_US.html
@@ -17,7 +17,7 @@
                 <ul>
                     <li>Renew books and videos</li>
                     <li>Create favorites lists</li>
-                    <li>Export citations to Refworks and Endnote Web</li>
+                    <li>Export citations</li>
                     <li>View full search results. (Some databases only show results when you're signed in.)</li>
                 </ul>
             </md-card-content>
